@@ -4,6 +4,7 @@ import com.example.demologin.dto.request.question.QuestionCreateRequest;
 import com.example.demologin.dto.request.question.QuestionUpdateRequest;
 import com.example.demologin.dto.response.QuestionResponse;
 import com.example.demologin.entity.*;
+import com.example.demologin.exception.exceptions.NotFoundException;
 import com.example.demologin.mapper.QuestionMapper;
 import com.example.demologin.repository.*;
 import com.example.demologin.service.QuestionService;
@@ -16,6 +17,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 
 @Service
@@ -26,6 +28,9 @@ public class QuestionServiceImpl implements QuestionService {
     private final OptionRepository optionRepo;
     private final QuestionTypeRepository questionTypeRepo;
     private final QuestionMapper mapper;
+    private final LevelRepository levelRepo;
+    private final LessonRepository lessonRepo;
+
 
     @Override
     @Transactional(readOnly = true)
@@ -43,78 +48,146 @@ public class QuestionServiceImpl implements QuestionService {
     }
 
     @Override
+    @Transactional
     public QuestionResponse create(QuestionCreateRequest req) {
+        Lesson lesson = lessonRepo.findById(req.getLessonId())
+                .orElseThrow(() -> new IllegalArgumentException("Lesson not found: " + req.getLessonId()));
+
+        Level level = levelRepo.findById(req.getLevelId())
+                .orElseThrow(() -> new IllegalArgumentException("Invalid levelId: " + req.getLevelId()));
+
+        String typeCode = req.getType() == null ? null : req.getType().trim().toUpperCase();
+        QuestionType type = questionTypeRepo.findByDescriptionIgnoreCase(typeCode)
+                .orElseThrow(() -> new IllegalArgumentException("QuestionType not found: " + req.getType()));
+
         Question q = new Question();
         q.setQuestionText(req.getQuestionText());
         q.setFormula(req.getFormula());
+        q.setLesson(lesson);
+        q.setLevel(level);
+        q.setType(type);
         q.setCreatedAt(LocalDateTime.now());
-        q.setUpdatedAt(q.getCreatedAt());
+        q.setUpdatedAt(LocalDateTime.now());
 
-        // map type (String -> QuestionType) theo description (case-insensitive)
-        if (req.getType() != null && !req.getType().isBlank()) {
-            QuestionType qt = questionTypeRepo.findByDescriptionIgnoreCase(req.getType().trim())
-                    .orElseThrow(() -> new IllegalArgumentException("Invalid question type: " + req.getType()));
-            q.setType(qt);
-        } else {
-            q.setType(null);
-        }
-
-        final Question saved = questionRepo.save(q);
-
-        // options
+        // Thêm options vào collection đang managed (KHÔNG gán list mới)
         if (req.getOptions() != null && !req.getOptions().isEmpty()) {
             List<Option> options = req.getOptions().stream()
-                    .map(o -> mapper.buildOption(saved, o))
-                    .toList();
-            optionRepo.saveAll(options);
-            saved.setOptions(options);
+                    .map(o -> new Option(null, null, o.getOptionText(), Boolean.TRUE.equals(o.getIsCorrect())))
+                    .collect(java.util.stream.Collectors.toList());
+
+            validateOptions(typeCode, options);
+
+            for (Option o : options) {
+                q.addOption(o); // add vào collection & setQuestion(this)
+            }
         }
 
+        // Chỉ cần save question; cascade=ALL sẽ lưu Option
+        Question saved = questionRepo.save(q);
         return mapper.toResponse(saved);
     }
 
     @Override
-    public QuestionResponse update(Long id, QuestionUpdateRequest req) {
-        Question q = questionRepo.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Question not found"));
+    @Transactional
+    public QuestionResponse update(Long questionId, QuestionUpdateRequest req) {
+        Question q = questionRepo.findById(questionId)
+                .orElseThrow(() -> new IllegalArgumentException("Question not found: " + questionId));
 
-        if (req.getQuestionText() != null) q.setQuestionText(req.getQuestionText());
-        if (req.getFormula() != null) q.setFormula(req.getFormula());
+        if (req.getQuestionText() != null && !req.getQuestionText().isBlank()) {
+            q.setQuestionText(req.getQuestionText().trim());
+        }
+        if (req.getFormula() != null) {
+            q.setFormula(req.getFormula());
+        }
+        if (req.getLessonId() != null) {
+            Lesson lesson = lessonRepo.findById(req.getLessonId())
+                    .orElseThrow(() -> new IllegalArgumentException("Lesson not found: " + req.getLessonId()));
+            q.setLesson(lesson);
+        }
+        if (req.getLevelId() != null) {
+            Level level = levelRepo.findById(req.getLevelId())
+                    .orElseThrow(() -> new IllegalArgumentException("Level not found: " + req.getLevelId()));
+            q.setLevel(level);
+        }
 
-        if (req.getType() != null) {
-            if (req.getType().isBlank()) {
-                q.setType(null);
-            } else {
-                QuestionType qt = questionTypeRepo.findByDescriptionIgnoreCase(req.getType().trim())
-                        .orElseThrow(() -> new IllegalArgumentException("Invalid question type: " + req.getType()));
-                q.setType(qt);
-            }
+        String effectiveTypeCode = null;
+        if (req.getType() != null && !req.getType().isBlank()) {
+            effectiveTypeCode = req.getType().trim().toUpperCase();
+            QuestionType type = questionTypeRepo.findByDescriptionIgnoreCase(effectiveTypeCode)
+                    .orElseThrow(() -> new IllegalArgumentException("QuestionType not found: " + req.getType()));
+            q.setType(type);
+        } else if (q.getType() != null) {
+            effectiveTypeCode = q.getType().getDescription();
         }
 
         q.setUpdatedAt(LocalDateTime.now());
 
-        // replace options nếu client gửi list
+        // Replace-all options đúng cách với orphanRemoval
         if (req.getOptions() != null) {
-            optionRepo.deleteByQuestion_Id(q.getId());
-            q.setOptions(List.of());
-            if (!req.getOptions().isEmpty()) {
-                List<Option> options = req.getOptions().stream()
-                        .map(o -> mapper.buildOption(q, o))
-                        .toList();
-                optionRepo.saveAll(options);
-                q.setOptions(options);
+            // Build list mới (mutable, chưa set question)
+            List<Option> newOptions = req.getOptions().stream()
+                    .map(o -> new Option(null, null, o.getOptionText(), Boolean.TRUE.equals(o.getIsCorrect())))
+                    .collect(java.util.stream.Collectors.toList());
+
+            if (effectiveTypeCode != null) {
+                validateOptions(effectiveTypeCode.toUpperCase(), newOptions);
+            }
+
+            // 1) Clear trên collection HIỆN CÓ (KHÔNG set list mới)
+            q.clearOptions(); // null back-ref + clear()
+
+            // 2) Add từng option vào collection managed (giữ nguyên instance)
+            for (Option o : newOptions) {
+                q.addOption(o); // setQuestion(this)
             }
         }
 
-        return mapper.toResponse(q);
+        // Không cần optionRepo.deleteAll/saveAll nếu cascade=ALL+orphanRemoval=true
+        Question saved = questionRepo.save(q);
+        return mapper.toResponse(saved);
     }
 
-    @Override
-    public void delete(Long id) {
-        Question q = questionRepo.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Question not found"));
+    private void validateOptions(String typeCode, List<Option> options) {
+        if (typeCode == null) return;
 
-        optionRepo.deleteByQuestion_Id(q.getId());
+        long correctCount = options.stream().filter(Option::getIsCorrect).count();
+
+        switch (typeCode) {
+            case "MCQ_SINGLE" -> {
+                if (correctCount != 1)
+                    throw new IllegalArgumentException("MCQ_SINGLE requires exactly 1 correct option.");
+                if (options.size() < 2)
+                    throw new IllegalArgumentException("MCQ_SINGLE should have at least 2 options.");
+            }
+            case "MCQ_MULTI" -> {
+                if (correctCount < 1)
+                    throw new IllegalArgumentException("MCQ_MULTI requires at least 1 correct option.");
+                if (options.size() < 2)
+                    throw new IllegalArgumentException("MCQ_MULTI should have at least 2 options.");
+            }
+            case "TRUE_FALSE" -> {
+                if (options.size() != 2)
+                    throw new IllegalArgumentException("TRUE_FALSE requires exactly 2 options (True/False).");
+                if (correctCount != 1)
+                    throw new IllegalArgumentException("TRUE_FALSE requires exactly 1 correct option.");
+            }
+            case "SHORT_ANSWER" -> {
+                if (options.size() != 1 || correctCount != 1)
+                    throw new IllegalArgumentException("SHORT_ANSWER should have exactly 1 correct answer.");
+            }
+            default -> { /* ignore others */ }
+        }
+    }
+
+
+    @Override
+    @Transactional
+    public void delete(Long id) {
+        // Gỡ liên kết exam_questions để tránh lỗi FK
+        questionRepo.unlinkAllExamsOfQuestion(id);
+
+        Question q = questionRepo.findById(id)
+                .orElseThrow(() -> new NotFoundException("Question not found: " + id));
         questionRepo.delete(q);
     }
 }
